扩展了远程打开机器UI的功能, AE啊AE你怎么这么独特<(≧□≦)>