@@ -75,10 +75,6 @@ public abstract class AEBaseScreenMixin {
             if (key == null) {
                 return;
             }
-            // Debug: 标记一次发送
-            try {
-                LogUtils.getLogger().info("EAP: Send CraftingMonitorJumpC2SPacket: {}", key);
-            } catch (Throwable ignored2) {}
             PacketDistributor.sendToServer(new CraftingMonitorJumpC2SPacket(key));
             cir.setReturnValue(true);
         } catch (Throwable ignored) {
@@ -186,8 +182,8 @@ public abstract class AEBaseScreenMixin {
             var details = PatternDetailsHelper.decodePattern(itemStack, Minecraft.getInstance().level);
             try {
                 if (details != null && details.getOutputs() != null && !details.getOutputs().isEmpty()) {
-                    AEKey key = details.getOutputs().get(0).what();
-                    if (key != null && ClientPatternHighlightStore.hasHighlight(key)) {
+                    AEKey key = details.getOutputs().getFirst().what();
+                    if (ClientPatternHighlightStore.hasHighlight(key)) {
                         try {
                             GuiUtil.drawSlotRainbowHighlight(guiGraphics, s.x, s.y);
                         } catch (Throwable ignored) {}
@@ -227,7 +223,7 @@ public abstract class AEBaseScreenMixin {
             // 只关心第一行（标题类文本无换行或 maxWidth<=0）
             var contentLine = (text.getMaxWidth() <= 0)
                     ? content.getVisualOrderText()
-                    : font.split(content, text.getMaxWidth()).get(0);
+                    : font.split(content, text.getMaxWidth()).getFirst();
             int lineWidth = font.width(contentLine);
 
             int x = pos.getX();
@@ -313,13 +309,13 @@ public abstract class AEBaseScreenMixin {
 
 
     @Shadow
-    protected void setTextContent(String id, Component content) {};
+    protected void setTextContent(String id, Component content) {}
 
     @Inject(method = "updateBeforeRender", at = @At("RETURN"), remap = false)
     private void onUpdateBeforeRender(CallbackInfo ci) {
         try {
             AEBaseScreen<?> self = (AEBaseScreen<?>) (Object) this;
-            if (self instanceof PatternProviderScreen screen){
+            if (self instanceof PatternProviderScreen<?> screen){
                 Component t = screen.getTitle();
                 if (t != null && !t.getString().isEmpty()) {
                     this.setTextContent(AEBaseScreen.TEXT_ID_DIALOG_TITLE, t);
